--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <title>Daily Select</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="normalize.css">
 </head>
 
 <body>
     <div class="nav">
-        <div class="logo">Daily Select</div>
+        <a href="#" class="logo"> Daily Select </a>
         <div class="navbar">
+            <a href="Stationery.html" class="stationery">STATIONERY</a>
+            <a href="#" class="stationery">Daily Stationery</a>
+            <a href="#" class="daily-groceries">Daily Groceries </a>
+            <a href="#" class="cosmetic">Daily Cosmetic</a>
+
 
         </div>
     </div>
