--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="nav">
+
         <a href="#" class="logo"> Daily Select </a>
+
         <div class="navbar">
             <a href="Stationery.html" class="stationery">STATIONERY</a>
             <a href="#" class="stationery">Daily Stationery</a>
             <a href="#" class="daily-groceries">Daily Groceries </a>
             <a href="#" class="cosmetic">Daily Cosmetic</a>
-
-
         </div>
+
     </div>
 
 </body>
