--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
 
 <body>
     <div class="nav">
-
-        <a href="#" class="logo"> Daily Select </a>
-
+        <div class="n-box1">
+            <a href="#" class="logo"> Daily Select </a>
+            <div id="n-box1-1">
+                <a href="#" class="shopping">Shopping</a>
+                <a href="#" class="login">Log in</a>
+            </div>
+        </div>
         <div class="navbar">
-            <a href="Stationery.html" class="stationery">STATIONERY</a>
-            <a href="#" class="stationery">Daily Stationery</a>
-            <a href="#" class="daily-groceries">Daily Groceries </a>
-            <a href="#" class="cosmetic">Daily Cosmetic</a>
+            <a href="#" class="new-arive" class="box">New Arrivals</a>
+            <a href="Stationery.html" class="stationery" class="box">Stationery</a>
+            <a href="#" class="daily-groceries" class="box">Daily Groceries </a>
+            <a href="#" class="cosmetic" class="box">Daily Cosmetic</a>
         </div>
 
     </div>
