--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
         <div class="n-box1">
             <a href="#" class="logo"> Daily Select </a>
             <div id="n-box1-1">
-                <a href="#" class="shopping">Shopping</a>
+                <a href="#" class="shopping"><img src="shopping-cart.png" alt="購物車"></a>
                 <a href="#" class="login">Log in</a>
             </div>
         </div>
         <div class="navbar">
-            <a href="#" class="new-arive" class="box">New Arrivals</a>
-            <a href="Stationery.html" class="stationery" class="box">Stationery</a>
-            <a href="#" class="daily-groceries" class="box">Daily Groceries </a>
-            <a href="#" class="cosmetic" class="box">Daily Cosmetic</a>
+            <a href="#" class="box">About Us</a>
+            <a href="#" class="box">New Arrivals</a>
+            <a href="Stationery.html" class="box">Stationery</a>
+            <a href="#" class="box">Daily Groceries </a>
+            <a href="#" class="box">Daily Cosmetic</a>
         </div>
 
+        <div class="image">
+            <img src="midori-notebook2.jpg" alt="">
+        </div>
     </div>
 
 </body>
