--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="nav">
         <div class="n-box1">
-            <a href="#" class="logo"> Daily Select </a>
+            <a href="#" class="logo"> <img src="logo.png" alt=""> </a>
             <div id="n-box1-1">
                 <a href="#" class="shopping"><img src="shopping-cart.png" alt="購物車"></a>
                 <a href="#" class="login">Log in</a>
@@ -29,9 +29,9 @@
             <a href="#" class="box">Daily Cosmetic</a>
         </div>
 
-        <div class="image">
-            <img src="midori-notebook2.jpg" alt="">
-        </div>
+        <!-- <div class="image">
+            <img src="banner3.png" alt="">
+        </div> -->
     </div>
 
 </body>
