--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <div class="nav">
         <div class="n-box1">
-            <a href="#" class="logo"> <img src="logo.png" alt=""> </a>
+            <a href="#" class="logo"> <img src="imgs/logo.png" alt=""> </a>
             <div id="n-box1-1">
-                <a href="#" class="shopping"><img src="shopping-cart.png" alt="購物車"></a>
+                <a href="#" class="shopping"><img src="imgs/shopping-cart.png" alt="購物車"></a>
                 <a href="#" class="login">Log in</a>
             </div>
         </div>
@@ -27,13 +27,16 @@
             <a href="Stationery.html" class="box">Stationery</a>
             <a href="#" class="box">Daily Groceries </a>
             <a href="#" class="box">Daily Cosmetic</a>
+            <a href="#" class="box">Contact</a>
         </div>
 
-        <!-- <div class="image">
-            <img src="banner3.png" alt="">
-        </div> -->
+
     </div>
 
 </body>
+
+<footer>
+    日子選物 Daily Select &copy; 2019
+</footer>
 
 </html>
