--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="imgs/favicon-07.png" type="image/x-icon">
 </head>
 
 <body>
     <div class="nav">
         <div class="n-box1">
-            <a href="#" class="logo"> <img src="imgs/logo.png" alt=""> </a>
+            <a href="#" class="logo"> <img src="imgs/logo 1.png" alt=""> </a>
             <div id="n-box1-1">
                 <a href="#" class="shopping"><img src="imgs/shopping-cart.png" alt="購物車"></a>
                 <a href="#" class="login">Log in</a>
