--- a/index.html
+++ b/index.html
@@ -30,6 +30,27 @@
             <a href="#" class="box">Daily Cosmetic</a>
             <a href="#" class="box">Contact</a>
         </div>
+    </div>
+    <div class="QnAcontainer">
+        <div class="QnAbox1">
+            <h1 class="QnA-1"> 如何退換貨
+                <h2>七天鑑賞期，提供退貨服務，運費另計。</h2>
+        </div>
+
+        <div class="QnAbox2">
+            <h1 class="QnA-2"> 如何退換貨
+                <p>您不需要註冊帳號，也可以使用快速結帳功能。建議您註冊新帳號可以讓您的購物過程更加快速愉快，並享有下列服務：</p>
+                <ul>
+                    <li>記住您的寄件地址以及付款資料，讓您結帳更快速方便</li>
+                    <li>查閱消費記錄</li>
+                    <li>享有購物金額累計，並有機會成為禮拜VIP</li>
+                </ul>
+        </div>
+
+        <div class="QnAbox3">
+            <h1 class="QnA-3"> 如何退換貨
+                <h2>七天鑑賞期，提供退貨服務，運費另計。</h2>
+        </div>
 
 
     </div>
